# EnrollWall

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
app/: app_model.py  config.py  database.py  db_model.py  dependencies.py  main.py
app/routers/: auth.py  courses.py  enrollments.py  users.py
